# eda-kafka-rust-go-surrealdb

./: .gitignore  Cargo.toml  dashboard.json  docker-compose.yml  init.surql  promtail-config-blank.yml
inventory/: .env-example  Cargo.toml  init.surql
inventory/src/: main.rs  schema.rs
inventory_service/: .env-example  Cargo.toml
inventory_service/src/: schema.rs
shipment_service/: .env-example  go.mod  go.sum  main.go
src/: kafka.rs  main.rs  schema.rs
surrealdb-kafka-fanout/: Cargo.toml  configure-grafana.sh  grafana-cloud-stack-env-example.sh
surrealdb-kafka-fanout/src/: main.rs
